Added start script and Readme Closes #1

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "Project Management",
     "Github"
   ],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
+  },
   "author": "Kaleidos OpenSource SL",
   "licenses": [
     {
